# rust-game-engine

./: Cargo.toml  README.md
appx/: AppxManifest.xml
bindings/: build.rs
src/: main.rs
src/game/: game_init.rs  game_main.rs  game_shutdown.rs  mod.rs
