[package]
name = "rust-game-engine"
version = "0.1.0"
authors = ["killyosaur"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.10.0"
bindings = { path = "bindings" }
winit = "0.24.0"
raw-window-handle = "0.3.3"
